# gymopus

./: .gitignore  .impeccable.md  CLAUDE.md  README.md  config.example.yaml  docker-compose.yml  project_spec.md  start.sh
backend/: .env.example  config.py  database.py  gymops.db  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 392dec503d42_create_initial_tables.py  441fe38b42d3_add_foods_meal_logs_daily_status_.py  f28269b48e52_add_training_plans.py
backend/app/: config.py  database.py  main.py
backend/app/agents/: context_agent.py  deps.py  diet_agent.py  intent_agent.py  meal_agent.py  qa_agent.py  report_agent.py  workout_agent.py
backend/app/api/: chat.py  deps.py  insights.py  knowledge.py  meals.py  (+6 more)
backend/knowledge/: loader.py  retriever.py
backend/models/: __init__.py  checkin.py  knowledge.py  plan.py  suggestion.py  user.py
backend/prompts/: nutrition_estimation.j2  plan_generation.j2  suggestion_analysis.j2  system.j2
backend/routers/: checkins.py  plans.py  suggestions.py  trends.py  users.py
backend/rules/: default_rules.yaml
backend/schemas/: checkin.py  common.py  plan.py  suggestion.py  trends.py  user.py
backend/services/: ai_analyzer.py  ai_integration.py  checkin_service.py  nutrition_estimator.py  plan_generator.py  rule_engine.py  suggestion_service.py  trend_service.py
backend/tests/: conftest.py  test_ai_integration.py  test_api.py  test_calculations.py  test_chat.py  test_checkins.py  test_llm_json.py  test_users.py
backend/utils/: calculations.py  crypto.py  llm_json.py
(+157 files in other folders)
